--- a/index.html
+++ b/index.html
@@ -1,43 +1,94 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="es-co">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE-edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Michael Varela</title>
-    <link rel="stylesheet" href="styles_inicio.css">
-</head>
-<body>
-    <header>
+    <link rel="stylesheet" href="./styles/style_inicio.css" />
+  </head>
+  <body>
+    <header class="header">
+      <nav class="header_menu">
+        <a class="header_menu_link" href="index.html">Home</a>
+        <a class="header_menu_link" href="about.html">Sobre mi</a>
+        <a class="header_menu_link" href="curriculum.html">Curriculum</a>
+      </nav>
     </header>
-        <main class="cuerpo">
-            <section class="seccion_cuerpo">
-                <h1 class="navega_laWeb">
-                    Amantes del <strong class="titulo_resaltado">codigo!</strong>
-                </h1>
-                <p class="presentacion">“¡Saludos! Soy Michael Danilo Varela, un artesano digital apasionado por 
-                    el código.
-                    <br>
-                    En este rincón virtual, comparto mis proyectos y habilidades en desarrollo web.”
-                    <br>
-                    <u class="subtitulo_enlaces">Haz click en los enlaces y descubre.</u>
-                </p>
-            <div class="caja_botones">
+    <main class="cuerpo">
+      <section class="seccion_cuerpo">
+        <h1 class="presentacion_titulo">
+          Bienvenidos!
+          <br />Aqui somos amantes del
+          <strong class="titulo_resaltado">codigo</strong>
+        </h1>
+        <p class="presentacion">
+          “¡Saludos! Soy Michael Danilo Varela, un artesano digital apasionado
+          por la programación.
+          <br />
+          En este rincón virtual, comparto mis proyectos y habilidades en
+          desarrollo web.”
+          <br />
+          <u class="subtitulo_enlaces">Haz click en los enlaces y descubre.</u>
+        </p>
+        <div class="caja_botones">
+          <div class="caja_botones_redes">
+            <h2 class="subtitulo_portafolio_y_redes">Accede a mis redes</h2>
+            <a class="btn_redes" href="https://github.com/MayVarela">
+              <img  class="icono" src="assets/github.png" alt="GitHub" />
+              GitHub
+            </a>
+            <a
+              class="btn_redes"
+              href="https://www.linkedin.com/in/michael-danilo-varela/">
+              <img class="icono" src="assets/linkedin.png" alt="LinkDin" />
+              LinkDin
+            </a>
+            <a class="btn_redes" href="https://instagram.com/mikolg">
+              <img class="icono" src="assets/instagram.png" alt="Instagram" />
+              Instagram
+            </a>
+          </div>
+          <div class="caja_boton_portafolio">
+            <h2 class="subtitulo_portafolio_y_redes">Accede a mi Portafolio</h2>
+            <a
+              class="btn_portafolio"
+              href="https://michael-varela.com/portafolio/">
+              <img src="assets/michaelDev.jpg" class="icono_portafolio" />
+            </a>
+          </div>
+        </div>
+      </section>
 
-                <div class="caja_botones_redes">
-                    <h2 class="subtitulo_redes">Accede a mis redes</h2>
-                    <a class="btn_redes" href="https://github.com/MayVarela" ><img src="assets/github.png" alt="GitHun">GitHub</a>
-                    <a class="btn_redes" href="https://www.linkedin.com/in/michael-danilo-varela/"><img src="assets/linkedin.png" alt="LinkDin">LinkDin</a>
-                    <a class="btn_redes" href="https://instagram.com/mikolg" ><img src="assets/instagram.png" alt="Instagram">Instagram</a>
-                </div>
-                <div class="caja_boton_portafolio">
-                    <h2 class="subtitulo_redes">Accede a mi Portafolio</h2>
-                    <a class="btn_portafolio" href="https://michael-varela.com/portafolio/"><img src="assets/michaelDev.jpg" class="icono_portafolio" ></a>
-                    </div>
+      <div class="seccion_derecha">
+        <img
+          class="miFoto"
+          src="assets/yo_depie.jpg"
+          alt="Michael Varela DEV" />
+        <div class="barras">
+          <div class="skill">
+            <h3>HTML</h3>
+            <div class="progress-bar">
+              <div class="progress" style="width: 80%">80%</div>
             </div>
-            </section>
-                <a href="https://www.x.com/"><img class="miFoto" src="assets/yo_depie.jpg" alt="Michael Varela DEV" ></a>
-        </main>
-    <footer>&copy;2024 Desarrollado por Michael Varela G.</footer>
-</body>
+          </div>
+          <div class="skill">
+            <h3>CSS</h3>
+            <div class="progress-bar">
+              <div class="progress" style="width: 70%">70%</div>
+            </div>
+          </div>
+          <div class="skill">
+            <h3>JavaScript</h3>
+            <div class="progress-bar">
+              <div class="progress" style="width: 50%">50%</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="footer">
+      &copy;2024 Desarrollado por Michael Varela G.
+    </footer>
+  </body>
 </html>
