--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
         <a class="header_menu_link" href="index.html">Home</a>
         <a class="header_menu_link" href="about.html">Sobre mi</a>
         <a class="header_menu_link" href="curriculum.html">Curriculum</a>
+        <a class="header_menu_link" href="encriptador.html">Encriptar texto</a>
       </nav>
     </header>
     <main class="cuerpo">
