cambio de fondo y colores de titulos, cambio en colores y diseño de barra skills, se le añade fondo a los botones y a la presentacion

--- a/encriptador.html
+++ b/encriptador.html
@@ -9,7 +9,7 @@
   <body>
     <header class="header">
       <h1>Encriptador de texto</h1>
-      <a class="volver" href="/portafolio/index.html">Volver</a>
+      <a class="volver" href="index.html">Volver</a>
     </header>
     <main class="seccionMain">
       <form onsubmit="return false;">
