--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a
               class="btn_portafolio"
               href="https://michael-varela.com/portafolio/">
-              <img src="assets/michaelDev.jpg" class="icono_portafolio" />
+              <img src="assets/fondo5.jpg" class="icono_portafolio" />
             </a>
           </div>
         </div>
@@ -68,19 +68,19 @@
           alt="Michael Varela DEV" />
         <div class="barras">
           <div class="skill">
-            <h3>HTML</h3>
+            <h3>HTML:</h3>
             <div class="progress-bar">
               <div class="progress" style="width: 80%">80%</div>
             </div>
           </div>
           <div class="skill">
-            <h3>CSS</h3>
+            <h3>CSS:</h3>
             <div class="progress-bar">
               <div class="progress" style="width: 70%">70%</div>
             </div>
           </div>
           <div class="skill">
-            <h3>JavaScript</h3>
+            <h3>JavaScript:</h3>
             <div class="progress-bar">
               <div class="progress" style="width: 50%">50%</div>
             </div>
